<resources>
    <string name="app_name">Calculator App</string>
    <string name="operation_space">operation space</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_1234">1234</string>
    <string name="divide">/</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="mul">*</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="CLR">CLR</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="decimal">.</string>
</resources>