<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"     
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".MainActivity">
    
    <TextView
        android:id="@+id/tvops"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#efefef"
        android:textSize="48sp"
        android:padding="10dp"
        android:gravity="end|bottom"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="2dp"
       android:layout_weight="1"
       android:orientation="horizontal">


       <Button
           android:layout_width="0dp"
           android:layout_margin="2dp"
           android:layout_height="match_parent"
           android:text="@string/_7"
           android:onClick="onDigit"
           android:layout_weight="1"/>

       <Button
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_margin="2dp"
           android:text="@string/_8"
           android:onClick="onDigit"
           android:layout_weight="1"/>

       <Button
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:text="@string/_9"
           android:layout_margin="2dp"
           android:onClick="onDigit"
           android:layout_weight="1"/>
       <Button
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:text="@string/divide"
           android:layout_margin="2dp"
           android:onClick="onOperator"
           android:layout_weight="1"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:text="@string/_4"
            android:onClick="onDigit"

            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_5"
            android:onClick="onDigit"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_6"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/mul"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:text="@string/_1"
            android:onClick="onDigit"

            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_2"
            android:onClick="onDigit"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_3"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/sub"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:text="@string/decimal"
            android:onClick="onDecimal"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:onClick="onDigit"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/CLR"
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/equal"
            android:layout_margin="2dp"
            android:onClick="onEqual"
            android:layout_weight="1"/>
    </LinearLayout>



</LinearLayout>